name:                track
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/noobymatze/track#readme
license:             BSD3
license-file:        LICENSE
author:              Matthias Metzger
maintainer:          noobymatze@yahoo.de
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable track
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       CLI
                     , Config
                     , Data.TimeEntry
                     , Data.TimeEntryResult
                     , Data.User
                     , Data.UsersResult
                     , Data.Named
                     , Helper
                     , Redmine.API
                     , Redmine.Client
  build-depends:       base >= 4.7 && < 5
                     , text
                     , optparse-applicative
                     , servant-client
                     , servant
                     , aeson
                     , time
                     , http-client
                     , http-client-tls
                     , directory
                     , filepath
