name:                track
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/noobymatze/track#readme
license:             BSD3
license-file:        LICENSE
author:              Matthias Metzger
maintainer:          noobymatze@yahoo.de
copyright:           2019 Matthias Metzger
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable track
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       App
                     , CLI
                     , CLI.Authenticated
                     , Config
                     , Data.Named
                     , Helper
                     , Redmine.Users.API
                     , Redmine.Users.Client
                     , Redmine.Users.User
                     , Redmine.Users.UserData
                     , Redmine.CustomFields.API
                     , Redmine.CustomFields.Client
                     , Redmine.CustomFields.CustomField
                     , Redmine.CustomFields.CustomFieldRsp
                     , Redmine.CustomFields.CustomValue
                     , Redmine.TimeEntries.API
                     , Redmine.TimeEntries.Client
                     , Redmine.TimeEntries.LimitedResult
                     , Redmine.TimeEntries.NewTimeEntry
                     , Redmine.TimeEntries.TimeEntry
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , directory
                     , filepath
                     , http-client
                     , http-client-tls
                     , mtl
                     , optparse-applicative
                     , servant-client
                     , servant
                     , prettyprinter
                     , time
                     , text
